[project]
name = "mubo-agent"
version = "0.1.0"
description = "Self-modifying agentic AI with Ollama"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=7.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[tool.uv]
dev-dependencies = []
